--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,11 @@
 
     <h1>Can I use bot</h1>
 
-    <p></p>
+    <p>
+        <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=39170978977.46522048998&redirect_uri=https%3a%2f%2fslack.botframework.com%2fHome%2fauth&state=can-i-use-bot">
+            <img height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x">
+        </a>
+    </p>
 
 </body>
 
