Webページを作成

--- a/static/index.html
+++ b/static/index.html
@@ -1,20 +1,56 @@
 <html>
 
 <head>
-    <title>Can I use bot</title>
+    <title>Can I use? bot</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/can-i-use-bot.css">
 </head>
 
 <body>
 
-    <h1>Can I use bot</h1>
 
-    <p>
+    <section class="WelcomeSection">
+        <h1 class="WelcomeSection-heading">Can I use? bot</h1>
+        <p class="WelcomeSection-lead">This is an unofficial bot of 'Can I use?'</p>
+
+
+    </section>
+
+
+    <div class="DemoSection">
+        <img class="DemoSection-movie" src="./assets/images/Demo.gif" alt="Demo">
+    </div>
+
+    <div class="AddSection">
+        <h3 class="AddSection-heading">Let's improve your work,<br>Add to your Slack now!</h3>
         <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=39170978977.46522048998&redirect_uri=https%3a%2f%2fslack.botframework.com%2fHome%2fauth&state=can-i-use-bot">
             <img height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x">
         </a>
-    </p>
+    </div>
+
+    <div class="WebChatSection">
+        <h3 class="WebChatSection-heading">Also, You can try here now!</h3>
+        <iframe src="https://webchat.botframework.com/embed/can-i-use-bot?s=9pMYTbBrwWc.cwA.xBA.zv3QTMRSDWoAvuPNkA04cSP5lK25lN2dsf-FU4Kdp3g" style="width:600px; height: 502px; max-height: 502px;"></iframe>
+        <p class="WebChatSection-message">Did you like it?
+            <br>Then, please add to your slack! ;D</p>
+    </div>
+
+
+    <div class="Footer">
+
+           <div class="Footer-profile">
+            <h2>Created by steelaxe</h2>
+            <p>Our GitHub page is <a href="./privacy.html">here</a>.</p>
+        </div>
+
+        <p><a href="./privacy.html">Bot privacy policy</a>
+        </p>
+        <p>Powerd by Can I use?, Microsoft Bot Framework, and caniuse-api.</p>
+
+    </div>
 
 </body>
 
