--- a/static/index.html
+++ b/static/index.html
@@ -1,9 +1,21 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <title>Can I use? bot</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+
+    <meta name="keywords" content="HTML,CSS,JavaScript,Slack,support,bot">
+    <meta name="description" content="You can check browser support on your slack without visiting caniuse website.">
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://www.caniuse-bot.com/" />
+    <meta property="og:title" content="Can I use? bot" />
+    <meta property="og:image" content="http://www.caniuse-bot.com/assets/images/Icon.png" />
+    <meta property="og:description" content="You can check browser support on your slack without visiting caniuse website." />
+    <meta property="og:site_name" content="Can I use? bot" />
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/can-i-use-bot.css">
@@ -41,14 +53,14 @@
 
     <div class="Footer">
 
-           <div class="Footer-profile">
+        <div class="Footer-profile">
             <h2>Created by steelaxe</h2>
-            <p>Our GitHub page is <a href="./privacy.html">here</a>.</p>
+            <p>Our GitHub page is <a href="https://github.com/steelaxe/" target="_blank">here</a>.</p>
         </div>
 
         <p><a href="./privacy.html">Bot privacy policy</a>
         </p>
-        <p>Powerd by Can I use?, Microsoft Bot Framework, and caniuse-api.</p>
+        <p>Powerd by Can I use?, caniuse-api, and Microsoft Bot Framework.</p>
 
     </div>
 
