--- a/static/index.html
+++ b/static/index.html
@@ -46,7 +46,7 @@
     <div class="WebChatSection">
         <h3 class="WebChatSection-heading">Also, You can try here now!</h3>
         <iframe src="https://webchat.botframework.com/embed/can-i-use-bot?s=9pMYTbBrwWc.cwA.xBA.zv3QTMRSDWoAvuPNkA04cSP5lK25lN2dsf-FU4Kdp3g" style="width:600px; height: 502px; max-height: 502px;"></iframe>
-        <p class="WebChatSection-message">Did you like it?
+        <p class="WebChatSection-message">Do you like it?
             <br>Then, please add to your slack! ;D</p>
     </div>
 
