--- a/static/index.html
+++ b/static/index.html
@@ -19,16 +19,21 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/can-i-use-bot.css">
+
 </head>
 
 <body>
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
 <a href="https://github.com/steelaxe/can-i-use-bot"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
     <section class="WelcomeSection">
         <h1 class="WelcomeSection-heading">Can I use? bot</h1>
         <p class="WelcomeSection-lead">This is an unofficial bot of 'Can I use?'</p>
-
-
+        <!-- Place this tag where you want the button to render. -->
+        <a class="github-button" href="https://github.com/steelaxe/can-i-use-bot/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/steelaxe/can-i-use-bot/network" data-count-api="/repos/steelaxe/can-i-use-bot#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork steelaxe/can-i-use-bot on GitHub">Fork</a>
+        <!-- Place this tag where you want the button to render. -->
+        <a class="github-button" href="https://github.com/steelaxe/can-i-use-bot" data-icon="octicon-star" data-style="mega" data-count-href="/steelaxe/can-i-use-bot/stargazers" data-count-api="/repos/steelaxe/can-i-use-bot#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star steelaxe/can-i-use-bot on GitHub">Star</a>
     </section>
 
 
