--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Can I use? bot</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=1400">
 
     <meta name="keywords" content="HTML,CSS,JavaScript,Slack,support,bot">
     <meta name="description" content="You can check browser support on your slack without visiting caniuse website.">
