引数1個多かったかもしれない

--- a/static/index.html
+++ b/static/index.html
@@ -45,7 +45,7 @@
     <div class="AddSection">
         <h3 class="AddSection-heading">Let's improve your work,<br>Add to your Slack now!</h3>
         <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=39170978977.46522048998&redirect_uri=https%3a%2f%2fslack.botframework.com%2fHome%2fauth&state=can-i-use-bot"
-           onclick="ga('send', 'event', 'trackingClick', 'Click', 'click add buttuon', value, {'nonInteraction': 1});">
+           onclick="ga('send', 'event', 'trackingClick', 'Click', 'click add buttuon', {'nonInteraction': 1});">
             <img height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x">
         </a>
     </div>
