--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=1400">
 
+    <meta name="robots" content="noindex">
     <meta name="keywords" content="HTML,CSS,JavaScript,Slack,support,bot">
     <meta name="description" content="You can check browser support on your slack without visiting caniuse website.">
 
