--- a/static/index.html
+++ b/static/index.html
@@ -56,6 +56,12 @@
         <p class="WebChatSection-message">Do you like it?
             <br>Then, please add to your slack! ;D</p>
     </div>
+    <div class="DiscussSection">
+         <h3 class="DiscussSection-heading">If you want to Discuss...</h3>
+        <div class="DiscussSection-iframeWrap">
+            <iframe src="https://gitter.im/steelaxe/can-i-use-bot"></iframe>
+        </div>
+    </div>
 
 
     <div class="Footer">
