--- a/static/index.html
+++ b/static/index.html
@@ -73,7 +73,7 @@
 
         <p><a href="./privacy.html">Bot privacy policy</a>
         </p>
-        <p>Powerd by Can I use?, caniuse-api, and Microsoft Bot Framework.</p>
+        <p>Powerd by Can I use?, caniuse-query, and Microsoft Bot Framework.</p>
 
     </div>
 
