--- a/static/privacy.html
+++ b/static/privacy.html
@@ -22,11 +22,11 @@
             <li>お客さまが希望されるサービスを行なうために当社が業務を委託する業者に対して開示する場合</li>
             <li>法令に基づき開示することが必要である場合</li>
         </ul>
-        <p><strong>個人情報の安全対策<br /></strong>当社は、個人情報の正確性及び安全性確保のために、セキュリティに万全の対策を講じています。
+        <p><strong>Privacy Safety Measures<br /></strong>We use a variety of security measures to make sure we protect your personal information.
             <br />
-            <br /><strong>ご本人の照会<br /></strong>お客さまがご本人の個人情報の照会・修正・削除などをご希望される場合には、ご本人であることを確認の上、対応させていただきます。
+            <br /><strong>Personal Inquiry<br /></strong>If a customer wants to inquiry/modify/delete your personal information, We'll deal with it after confirming the user himself/herself.
             <br />
-            <br /><strong>法令、規範の遵守と見直し<br /></strong>当社は、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。<strong>お問い合せ</strong>当社の個人情報の取扱に関するお問い合せは下記までご連絡ください。
+            <br /><strong>Compliance and Revision<br /></strong>当社は、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。<strong>お問い合せ</strong>当社の個人情報の取扱に関するお問い合せは下記までご連絡ください。
             <br />mail: okajax★gmail.com</p>
         <p>&nbsp;</p>
     </section>
