--- a/static/privacy.html
+++ b/static/privacy.html
@@ -12,9 +12,9 @@
     <section>
         <h3>Bot Privacy Policy</h3>
 
-        <p><strong>Personal Information Management<br /></strong>当社は、お客さまの個人情報を正確かつ最新の状態に保ち、個人情報への不正アクセス・紛失・破損・改ざん・漏洩などを防止するため、セキュリティシステムの維持・管理体制の整備・社員教育の徹底等の必要な措置を講じ、安全対策を実施し個人情報の厳重な管理を行ないます。
+        <p><strong>Personal Information Management<br /></strong>
             <br />
-            <br /><strong>個人情報の利用目的<br /></strong>お客さまからお預かりした個人情報は、当社からのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。
+            <br /><strong>Why we have to use personal information<br /></strong>お客さまからお預かりした個人情報は、当社からのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。
             <br />
             <br /><strong>個人情報の第三者への開示・提供の禁止<br /></strong>当社は、お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。</p>
         <ul>
