--- a/static/privacy.html
+++ b/static/privacy.html
@@ -14,9 +14,9 @@
 
         <p><strong>Personal Information Management<br /></strong>
             <br />
-            <br /><strong>Why we have to use personal information<br /></strong>お客さまからお預かりした個人情報は、当社からのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。
+            <br /><strong>Why we have to use personal information<br /></strong>We use personal information for messaging or answering your questions or sending e-mails or documents. 
             <br />
-            <br /><strong>個人情報の第三者への開示・提供の禁止<br /></strong>当社は、お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。</p>
+            <br /><strong>Prohibition from disclosing personal information to others<br /></strong>We will manage customer's personal information properly, and We won't disclose personal information to others except below cases</p>
         <ul>
             <li>お客さまの同意がある場合</li>
             <li>お客さまが希望されるサービスを行なうために当社が業務を委託する業者に対して開示する場合</li>
