--- a/static/privacy.html
+++ b/static/privacy.html
@@ -18,9 +18,9 @@
             <br />
             <br /><strong>Prohibition from disclosing personal information to others<br /></strong>We will manage customer's personal information properly, and We won't disclose personal information to others except below cases</p>
         <ul>
-            <li>お客さまの同意がある場合</li>
-            <li>お客さまが希望されるサービスを行なうために当社が業務を委託する業者に対して開示する場合</li>
-            <li>法令に基づき開示することが必要である場合</li>
+            <li>If you have your agreement</li>
+            <li>If you want to use some services provided by other companies which requires us to use your information.</li>
+            <li>If the disclosure is necessary based on a law</li>
         </ul>
         <p><strong>Privacy Safety Measures<br /></strong>We use a variety of security measures to make sure we protect your personal information.
             <br />
