--- a/static/privacy.html
+++ b/static/privacy.html
@@ -26,7 +26,7 @@
             <br />
             <br /><strong>Personal Inquiry<br /></strong>If a customer wants to inquiry/modify/delete your personal information, We'll deal with it after confirming the user himself/herself.
             <br />
-            <br /><strong>Compliance and Revision<br /></strong>当社は、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。<strong>お問い合せ</strong>当社の個人情報の取扱に関するお問い合せは下記までご連絡ください。
+            <br /><strong>Compliance and Revision<br /></strong>We will abide by Japanese law and any other rules regarding personal information we retain. and We sill improve this policy accordingly<strong>Contact</strong>If you want to inquire our personal information management, please contact us from below email address
             <br />mail: okajax★gmail.com</p>
         <p>&nbsp;</p>
     </section>
