--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Can I use? bot</title>
+    <title>Can I use? bot for Slack</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=1400">
 
@@ -11,10 +11,10 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://www.caniuse-bot.com/" />
-    <meta property="og:title" content="Can I use? bot" />
+    <meta property="og:title" content="Can I use? bot for Slack" />
     <meta property="og:image" content="http://www.caniuse-bot.com/assets/images/Icon.png" />
     <meta property="og:description" content="You can check browser support on your slack without visiting caniuse website." />
-    <meta property="og:site_name" content="Can I use? bot" />
+    <meta property="og:site_name" content="Can I use? bot for Slack" />
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
