--- a/static/index.html
+++ b/static/index.html
@@ -52,6 +52,7 @@
         <a href="https://slack.com/oauth/authorize?scope=incoming-webhook,bot&client_id=39170978977.46522048998&redirect_uri=https%3a%2f%2fslack.botframework.com%2fHome%2fauth&state=can-i-use-bot" onclick="ga('send', 'event', 'trackingClick', 'click add button', 'click add button', {'nonInteraction': 1});">
             <img height="40" width="139" src="https://platform.slack-edge.com/img/add_to_slack.png" srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x">
         </a>
+        <p class="Addsection-message">More than 300 teams have already been using! 😉</p>
     </div>
 
     <div class="WebChatSection">
