--- a/static/privacy.html
+++ b/static/privacy.html
@@ -13,7 +13,7 @@
         <h3>Bot Privacy Policy</h3>
 
         <p><strong>Personal Information Management<br />We will keep personal information accurate and up-to-date, and in order to prevent unauthorized access/loss/corruption/
-falsification/leakage, We will maintain our security-system and manage-system and do safety-measures so that we can manage personal information strictly</strong>
+falsification/leakage, We will maintain our security-system and manage-system and do safety-measures so that we can control personal information strictly</strong>
             <br />
             <br /><strong>Why we have to use personal information<br /></strong>We use personal information for messaging or answering your questions or sending e-mails or documents. 
             <br />
