--- a/static/privacy.html
+++ b/static/privacy.html
@@ -27,7 +27,7 @@ falsification/leakage, We will maintain our security-system and manage-system an
             <br />
             <br /><strong>Personal Inquiry<br /></strong>If a customer wants to inquiry/modify/delete your personal information, We'll deal with it after confirming the user himself/herself.
             <br />
-            <br /><strong>Compliance and Revision<br /></strong>We will abide by Japanese law and any other rules regarding personal information we retain. and We sill improve this policy accordingly<strong>Contact</strong>If you want to inquire our personal information management, please contact us from below email address
+            <br /><strong>Compliance and Revision<br /></strong>We will abide by Japanese law and any other rules regarding personal information we retain. and We sill improve this policypolicy accordingly<strong>Contact</strong>If you want to inquire our personal information management, please contact us from below email address
             <br />mail: okajax★gmail.com</p>
         <p>&nbsp;</p>
     </section>
