privacy.html 更新

--- a/static/privacy.html
+++ b/static/privacy.html
@@ -1,13 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Privacy</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 </head>
+
 <body>
 
-    <p><a href="/">back</a></p>
+
+   <div class="container">
+
+    <section>
+        <h3>Bot Privacy Policy</h3>
+
+        <p><strong>Personal Information Management<br /></strong>
+            <br />
+            <br /><strong>Why we have to use personal information<br /></strong>We use personal information for messaging or answering your questions or sending e-mails or documents.
+            <br />
+            <br /><strong>Prohibition from disclosing personal information to others<br /></strong>We will manage customer's personal information properly, and We won't disclose personal information to others except below cases</p>
+        <ul>
+            <li>If you have your agreement</li>
+            <li>If you want to use some services provided by other companies which requires us to use your information.</li>
+            <li>If the disclosure is necessary based on a law</li>
+        </ul>
+        <p><strong>Privacy Safety Measures<br /></strong>We use a variety of security measures to make sure we protect your personal information.
+            <br />
+            <br /><strong>Personal Inquiry<br /></strong>If a customer wants to inquiry/modify/delete your personal information, We'll deal with it after confirming the user himself/herself.
+            <br />
+            <br /><strong>Compliance and Revision<br /></strong>We will abide by Japanese law and any other rules regarding personal information we retain. and We sill improve this policy accordingly<strong>Contact</strong>If you want to inquire our personal information management, please contact us from below email address
+            <br />Mail: okajax😍🍣😍 gmail.com</p>
+        <p>&nbsp;</p>
+    </section>
+
+    <hr>
 
     <section>
         <h3>Bot Privacy Policy</h3>
@@ -26,10 +55,17 @@
             <br />
             <br /><strong>ご本人の照会<br /></strong>お客さまがご本人の個人情報の照会・修正・削除などをご希望される場合には、ご本人であることを確認の上、対応させていただきます。
             <br />
-            <br /><strong>法令、規範の遵守と見直し<br /></strong>当社は、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。<strong>お問い合せ</strong>当社の個人情報の取扱に関するお問い合せは下記までご連絡ください。
-            <br />mail: okajax★gmail.com</p>
+            <br /><strong>法令、規範の遵守と見直し<br /></strong>当社は、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。<br>
+            <strong>お問い合せ</strong>当社の個人情報の取扱に関するお問い合せは下記までご連絡ください。
+            <br />Mail: okajax😍🍣😍 gmail.com</p>
         <p>&nbsp;</p>
     </section>
 
+    <hr>
+
+    <p><a href="/">&lt;&lt; back</a></p>
+
+</div>
 </body>
+
 </html>
