upadate privacy.html

--- a/static/privacy.html
+++ b/static/privacy.html
@@ -7,65 +7,93 @@
     <title>Privacy</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/can-i-use-bot.css">
 </head>
 
-<body>
+<body class="page-pricacyPolicy">
 
 
-   <div class="container">
+    <div class="container">
 
-    <section>
-        <h3>Bot Privacy Policy</h3>
+        <section>
+            <h2>Bot Privacy Policy</h2>
 
-        <p><strong>Personal Information Management<br /></strong>
-            <br />
-            <br /><strong>Why we have to use personal information<br /></strong>We use personal information for messaging or answering your questions or sending e-mails or documents.
-            <br />
-            <br /><strong>Prohibition from disclosing personal information to others<br /></strong>We will manage customer's personal information properly, and We won't disclose personal information to others except below cases</p>
-        <ul>
-            <li>If you have your agreement</li>
-            <li>If you want to use some services provided by other companies which requires us to use your information.</li>
-            <li>If the disclosure is necessary based on a law</li>
-        </ul>
-        <p><strong>Privacy Safety Measures<br /></strong>We use a variety of security measures to make sure we protect your personal information.
-            <br />
-            <br /><strong>Personal Inquiry<br /></strong>If a customer wants to inquiry/modify/delete your personal information, We'll deal with it after confirming the user himself/herself.
-            <br />
-            <br /><strong>Compliance and Revision<br /></strong>We will abide by Japanese law and any other rules regarding personal information we retain. and We sill improve this policy accordingly<strong>Contact</strong>If you want to inquire our personal information management, please contact us from below email address
-            <br />Mail: okajax😍🍣😍 gmail.com</p>
-        <p>&nbsp;</p>
-    </section>
+            <h3>Personal Information Management</h3>
+            <p>We will keep personal information accurate and up-to-date, and in order to prevent unauthorized access/loss/corruption/
+                <br />falsification/leakage, We will maintain our security-system and manage-system and do safety-measures so that we can control personal information strictly
+            </p>
 
-    <hr>
+            <h3>Why we have to use personal information</h3>
+            <p>We use personal information for messaging or answering your questions or sending e-mails or documents.</p>
 
-    <section>
-        <h3>Bot Privacy Policy</h3>
+            <h3>Prohibition from disclosing personal information to others</h3>
+            <p>We will manage customer's personal information properly, and We won't disclose personal information to others except below cases</p>
 
-        <p><strong>個人情報の管理<br /></strong>当社は、お客さまの個人情報を正確かつ最新の状態に保ち、個人情報への不正アクセス・紛失・破損・改ざん・漏洩などを防止するため、セキュリティシステムの維持・管理体制の整備・社員教育の徹底等の必要な措置を講じ、安全対策を実施し個人情報の厳重な管理を行ないます。
-            <br />
-            <br /><strong>個人情報の利用目的<br /></strong>お客さまからお預かりした個人情報は、当社からのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。
-            <br />
-            <br /><strong>個人情報の第三者への開示・提供の禁止<br /></strong>当社は、お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。</p>
-        <ul>
-            <li>お客さまの同意がある場合</li>
-            <li>お客さまが希望されるサービスを行なうために当社が業務を委託する業者に対して開示する場合</li>
-            <li>法令に基づき開示することが必要である場合</li>
-        </ul>
-        <p><strong>個人情報の安全対策<br /></strong>当社は、個人情報の正確性及び安全性確保のために、セキュリティに万全の対策を講じています。
-            <br />
-            <br /><strong>ご本人の照会<br /></strong>お客さまがご本人の個人情報の照会・修正・削除などをご希望される場合には、ご本人であることを確認の上、対応させていただきます。
-            <br />
-            <br /><strong>法令、規範の遵守と見直し<br /></strong>当社は、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。<br>
-            <strong>お問い合せ</strong>当社の個人情報の取扱に関するお問い合せは下記までご連絡ください。
-            <br />Mail: okajax😍🍣😍 gmail.com</p>
-        <p>&nbsp;</p>
-    </section>
+            <ul>
+                <li>If you have your agreement</li>
+                <li>If you want to use some services provided by other companies which requires us to use your information.</li>
+                <li>If the disclosure is necessary based on a law</li>
+            </ul>
 
-    <hr>
 
-    <p><a href="/">&lt;&lt; back</a></p>
+            <h3>Privacy Safety Measures</h3>
+            <p>We use a variety of security measures to make sure we protect your personal information.</p>
 
-</div>
+            <h3>Personal Inquiry</h3>
+            <p>If a customer wants to inquiry/modify/delete your personal information, We'll deal with it after confirming the user himself/herself.</p>
+
+            <h3>Compliance and Revision</h3>
+            <p>We will abide by Japanese law and any other rules regarding personal information we retain. and We sill improve this policypolicy accordingly</p>
+
+            <h3>Contact</h3>
+            <p>If you want to inquire our personal information management, please contact us from below email address</p>
+            <p>support🍣😍 caniuse-bot.com</p>
+
+        </section>
+
+        <hr>
+
+        <section>
+            <h2>プライバシーポリシー</h2>
+
+            <h3>個人情報の管理</h3>
+            <p>お客さまの個人情報を正確かつ最新の状態に保ち、個人情報への不正アクセス・紛失・破損・改ざん・漏洩などを防止するため、セキュリティシステムの維持・管理体制の整備・社員教育の徹底等の必要な措置を講じ、安全対策を実施し個人情報の厳重な管理を行ないます。
+            </p>
+
+            <h3>個人情報の利用目的</h3>
+            <p>お客さまからお預かりした個人情報は、私たちからのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。</p>
+
+            <h3>個人情報の第三者への開示・提供の禁止</h3>
+            <p>お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。</p>
+
+            <ul>
+                <li>お客さまの同意がある場合</li>
+                <li>お客さまが希望されるサービスを行なうために私たちが業務を委託する業者に対して開示する場合</li>
+                <li>法令に基づき開示することが必要である場合</li>
+            </ul>
+
+            <h3>個人情報の安全対策</h3>
+            <p>個人情報の正確性及び安全性確保のために、セキュリティに万全の対策を講じています。</p>
+
+            <h3>ご本人の照会</h3>
+            <p>お客さまがご本人の個人情報の照会・修正・削除などをご希望される場合には、ご本人であることを確認の上、対応させていただきます。</p>
+
+            <h3>法令、規範の遵守と見直し</h3>
+            <p>保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。</p>
+
+            <h3>お問い合せ</h3>
+            <p>個人情報の取扱に関するお問い合せは下記までご連絡ください。</p>
+
+            <p>support🍣😍 caniuse-bot.com</p>
+            <p>&nbsp;</p>
+        </section>
+
+        <hr>
+
+        <p><a href="/">&lt;&lt; back</a>
+        </p>
+
+    </div>
 </body>
 
 </html>
