--- a/static/privacy.html
+++ b/static/privacy.html
@@ -24,7 +24,8 @@
             </p>
 
             <h3>Why we have to use personal information</h3>
-            <p>We use personal information for messaging or answering your questions or sending e-mails or documents.</p>
+            <p>We use personal information for improve our bot. We have been analyzing user actions by Mixpanel. If you mind tracking, please click <a href="https://mixpanel.com/optout/" target="_blank">here</a> to opt out.
+            <br>And, if you contact us, we use personal information for messaging or answering your questions or sending e-mails or documents.</p>
 
             <h3>Prohibition from disclosing personal information to others</h3>
             <p>We will manage customer's personal information properly, and We won't disclose personal information to others except below cases</p>
@@ -61,7 +62,9 @@
             </p>
 
             <h3>個人情報の利用目的</h3>
-            <p>お客さまからお預かりした個人情報は、私たちからのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。</p>
+            <p>
+            お客さまからお預かりした個人情報はボットの改善のために、使用いたします。私たちはユーザーの行動解析にMixpanelを使用しています。オプトアウト(追跡の拒否)をご希望の方は、お手数ですが<a href="https://mixpanel.com/optout/" target="_blank">こちらのリンク</a>からお願いいたします。
+            <br>また、お客さまからご連絡を受けた場合、お預かりした個人情報は、私たちからのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。</p>
 
             <h3>個人情報の第三者への開示・提供の禁止</h3>
             <p>お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。</p>
