--- a/static/privacy.html
+++ b/static/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Privacy</title>
+    <title>Privacy Policy - Can I use? bot</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/can-i-use-bot.css">
@@ -48,7 +48,7 @@
 
             <h3>Contact</h3>
             <p>If you want to inquire our personal information management, please contact us from below email address</p>
-            <p>support🍣😍 caniuse-bot.com</p>
+            <p>📧: support🍣😍 caniuse-bot.com</p>
 
         </section>
 
@@ -63,7 +63,7 @@
 
             <h3>個人情報の利用目的</h3>
             <p>
-            お客さまからお預かりした個人情報はボットの改善のために、使用いたします。私たちはユーザーの行動解析にMixpanelを使用しています。オプトアウト(追跡の拒否)をご希望の方は、お手数ですが<a href="https://mixpanel.com/optout/" target="_blank">こちらのリンク</a>からお願いいたします。
+            お客さまからお預かりした個人情報は、ボットの改善のために使用いたします。私たちはユーザーの行動解析にMixpanelを使用しています。オプトアウト(追跡の拒否)をご希望の方は、お手数ですが<a href="https://mixpanel.com/optout/" target="_blank">こちらのリンク</a>からお願いいたします。
             <br>また、お客さまからご連絡を受けた場合、お預かりした個人情報は、私たちからのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。</p>
 
             <h3>個人情報の第三者への開示・提供の禁止</h3>
@@ -87,7 +87,7 @@
             <h3>お問い合せ</h3>
             <p>個人情報の取扱に関するお問い合せは下記までご連絡ください。</p>
 
-            <p>support🍣😍 caniuse-bot.com</p>
+            <p>📧: support🍣😍 caniuse-bot.com</p>
             <p>&nbsp;</p>
         </section>
 
