--- a/static/privacy.html
+++ b/static/privacy.html
@@ -25,7 +25,7 @@
 
             <h3>Why we have to use personal information</h3>
             <p>We use personal information for improve our bot. We have been analyzing user actions by Mixpanel. If you mind tracking, please click <a href="https://mixpanel.com/optout/" target="_blank">here</a> to opt out.
-            <br>And, if you contact us, we use personal information for messaging or answering your questions or sending e-mails or documents.</p>
+                <br>And, if you contact us, we use personal information for messaging or answering your questions or sending e-mails or documents.</p>
 
             <h3>Prohibition from disclosing personal information to others</h3>
             <p>We will manage customer's personal information properly, and We won't disclose personal information to others except below cases</p>
@@ -48,14 +48,14 @@
 
             <h3>Contact</h3>
             <p>If you want to inquire our personal information management, please contact us from below email address</p>
-            <p>📧: support🍣😍 caniuse-bot.com</p>
+            <p>📧 : support🍣😍 caniuse-bot.com</p>
 
         </section>
 
         <hr>
 
         <section>
-            <h2>プライバシーポリシー</h2>
+            <h2>ボットプライバシーポリシー</h2>
 
             <h3>個人情報の管理</h3>
             <p>お客さまの個人情報を正確かつ最新の状態に保ち、個人情報への不正アクセス・紛失・破損・改ざん・漏洩などを防止するため、セキュリティシステムの維持・管理体制の整備・社員教育の徹底等の必要な措置を講じ、安全対策を実施し個人情報の厳重な管理を行ないます。
@@ -63,8 +63,8 @@
 
             <h3>個人情報の利用目的</h3>
             <p>
-            お客さまからお預かりした個人情報は、ボットの改善のために使用いたします。私たちはユーザーの行動解析にMixpanelを使用しています。オプトアウト(追跡の拒否)をご希望の方は、お手数ですが<a href="https://mixpanel.com/optout/" target="_blank">こちらのリンク</a>からお願いいたします。
-            <br>また、お客さまからご連絡を受けた場合、お預かりした個人情報は、私たちからのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。</p>
+                お客さまからお預かりした個人情報は、ボットの改善のために使用いたします。私たちはユーザーの行動解析にMixpanelを使用しています。オプトアウト(追跡の拒否)をご希望の方は、お手数ですが<a href="https://mixpanel.com/optout/" target="_blank">こちらのリンク</a>からお願いいたします。
+                <br>また、お客さまからご連絡を受けた場合、お預かりした個人情報は、私たちからのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。</p>
 
             <h3>個人情報の第三者への開示・提供の禁止</h3>
             <p>お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。</p>
@@ -87,9 +87,13 @@
             <h3>お問い合せ</h3>
             <p>個人情報の取扱に関するお問い合せは下記までご連絡ください。</p>
 
-            <p>📧: support🍣😍 caniuse-bot.com</p>
+            <p>📧 : support🍣😍 caniuse-bot.com</p>
             <p>&nbsp;</p>
         </section>
+
+        <hr>
+
+        <p>Written by <a href="http://www.steelaxe.io/" target="_blank">steelaxe</a> the development team of 'Can I use? bot' (last update 06-18-2016)</p>
 
         <hr>
 
