--- a/static/index.html
+++ b/static/index.html
@@ -64,7 +64,7 @@
     <div class="DiscussSection">
         <h3 class="DiscussSection-heading">If you want to Discuss...</h3>
         <div class="DiscussSection-iframeWrap">
-            <iframe src="https://gitter.im/steelaxe/can-i-use-bot"></iframe>
+            <iframe src="https://gitter.im/steelaxe/can-i-use-bot/~embed/"></iframe>
         </div>
     </div>
 
@@ -72,8 +72,8 @@
     <div class="Footer">
 
         <div class="Footer-profile">
-            <h2>Created by steelaxe</h2>
-            <p>Our GitHub page is <a href="https://github.com/steelaxe/" target="_blank">here</a>.</p>
+            <h2>Made with ❤️ by <a href="http://www.steelaxe.io/" target="_blank">steelaxe</a></h2>
+            <p>Our github is <a href="https://github.com/steelaxe/" target="_blank">here</a>.</p>
         </div>
 
         <div id="coinwidget-bitcoin-1AGsq6hB19yawsmRcwqnFWcwN3EaQjYnhB"></div>
