--- a/static/index.html
+++ b/static/index.html
@@ -73,12 +73,9 @@
 
         <div class="Footer-profile">
             <h2>Made with ❤️ by <a href="http://www.steelaxe.io/" target="_blank">steelaxe</a></h2>
-            <p>Our github is <a href="https://github.com/steelaxe/" target="_blank">here</a>.</p>
+            <p>Our GitHub is <a href="https://github.com/steelaxe/" target="_blank">here</a>.</p>
         </div>
-
-        <div id="coinwidget-bitcoin-1AGsq6hB19yawsmRcwqnFWcwN3EaQjYnhB"></div>
-
-        <p><a href="./privacy.html">Bot privacy policy</a>
+        <p><a href="./privacy.html">Bot Privacy Policy</a>
         </p>
         <p>Powerd by Can I use?, caniuse-query, and Microsoft Bot Framework.</p>
 
