update gitter section on index.html

--- a/static/index.html
+++ b/static/index.html
@@ -63,9 +63,17 @@
     </div>
     <div class="DiscussSection">
         <h3 class="DiscussSection-heading">If you want to Discuss...</h3>
+
+           <div class="DiscussSection-gitterPreview">
+               <a href="https://gitter.im/steelaxe/can-i-use-bot/" target="_blank" class="DiscussSection-gitterPreview-button">
+                   Join our Gitter chat room!
+               </a>
+           </div>
+       <!--
         <div class="DiscussSection-iframeWrap">
             <iframe src="https://gitter.im/steelaxe/can-i-use-bot/~embed/"></iframe>
         </div>
+-->
     </div>
 
 
